--- a/public/be619.css
+++ b/public/be619.css
@@ -462,7 +462,8 @@ main {
     margin: 5px 0px;
 }
 
-.mdbtn:hover .kpb789123:hover {
+.mdbtn:hover,
+.kpb789123:hover {
     box-shadow: 10px 0px 10px orange;
     background-color: transparent;
     border: 1px solid orange;
@@ -488,7 +489,7 @@ a {
     font-size: 30px;
     color: orange;
     position: sticky;
-    top: 76px;
+    top: 105px;
     background: white;
     z-index: 2;
     min-height: 5vh;
@@ -664,7 +665,12 @@ main {
     height: auto;
     flex-wrap: wrap;
 }
+@media (max-width:700px) {
+    .kl789123 {
+        top: 76px;
+    }
 
+}
 @media (max-width:670px) {
 
     /* main */
