--- a/public/be619.css
+++ b/public/be619.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300;400&display=swap');
+
 :root {
     --pagebgclr: white;
     --borderclr: #dddddd;
@@ -6,9 +7,11 @@
     --primaryclr: orange;
     --borderinfoelement: black;
 }
+
 * {
     margin: 0;
     padding: 0;
+    transition: all;
 }
 
 body {
@@ -27,6 +30,79 @@ table {
     width: 90%;
     display: none;
     margin: auto;
+}
+/* feedback */
+.ftrh1,.ftreh1{
+    width: 95%;
+    font-size: 20px;
+    margin: 50px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #00000054;
+}
+.ftreh1{
+    color: black;
+    font-size: 25px;
+    margin-bottom:10px ;
+}
+.ftrreviwwrap{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-direction: column;
+    background-color: #0000001b;
+
+}
+.ftrreviwwrap input{
+    width: 90%;
+    max-width: 500px;
+    height: 40px;
+    border-radius: 10px;
+    border: 1px solid black;
+    margin-top: 20px;
+    padding: 0px 10px;
+}
+
+.ftrreviwwrap button{
+    cursor: pointer;
+    width: 90%;
+    max-width: 500px;
+    height: 40px;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    outline: none;
+    border: 1px solid black;
+    transition: all;
+    transition-duration: 0.5s;
+}
+.ftrreviwwrap form{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+.ftrreviwwrap button:hover{
+    background-color: white;
+}
+textarea{
+    width: 90%;
+    max-width: 500px;
+    border-radius: 5px;
+    
+    border: 1px solid black;
+    padding: 10px 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 td,
@@ -57,10 +133,9 @@ tr:nth-child(even) {
     font-size: 30px;
     text-align: center;
     padding: 5px;
-        border: 2px solid var(--borderinfoelement);
-        border-radius: 10px;
-        min-width: 30%;
-        margin: 10px 0px;
+    border-radius: 10px;
+    min-width: 30%;
+    margin: 10px 0px;
 }
 
 .sydrp {
@@ -69,18 +144,50 @@ tr:nth-child(even) {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 2px solid var(--borderinfoelement);
+    border: 2px solid #00000054;
     border-radius: 12px;
     margin: auto;
 }
+.itsec{
+    padding: 10px 20px ;
 
+    width: 100%;
+    display: flex;
+    grid-template-columns: repeat(2
+    ,1fr);
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.itsec a{
+    height: 200px;
+    width: 200px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+    font-weight: 500;
+    transition: background-color,  border-radius,color;
+    transition-duration: 0.5s;
+    background-color: rgb(252, 190, 76);
+
+}
+.itsec a:hover{
+    background-color: orange;
+    border-radius: 30px;
+    color: white;
+}
 .syhdd {
     width: 90%;
     display: flex;
     justify-content: space-between;
+    justify-items: start;
     align-items: center;
     padding: 5px;
-    /* flex-direction: column; */
 
 }
 
@@ -95,8 +202,8 @@ nav {
     position: fixed;
     top: 0;
     z-index: 999;
-        background-color: var(--pagebgclr);
-        width: 100%;
+    background-color: var(--pagebgclr);
+    width: 100%;
     overflow: hidden;
     border-bottom: 2px solid black;
 }
@@ -175,13 +282,13 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: start;
-        flex-direction: column;
-    }
-    
-    .row {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+    flex-direction: column;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -381,18 +488,48 @@ header {
 }
 
 /* main */
-/* main */
+
 main {
     width: 100%;
     height: 100%;
 }
+.navwrapper,
+.navlink {
+    width: 200px;
+    height: 200px;
+    background-color: orange;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    border-radius: 5px;
+    font-weight: 600;
+    scale: 1;
+    text-decoration: none;
+    transition: border-radius scale text-decoration;
+    transition-duration: 0.5s;
+}
+.navlink:hover {
+    border-radius: 10px;
+    scale: 1.1;
+    text-decoration: underline;
+}
 
+.maniwrraper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 .ab12345 {
     width: auto;
     height: auto;
     display: flex;
-    justify-content: space-evenly;
-    align-items: start;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
 }
@@ -598,6 +735,7 @@ main {
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+    width: 100%;
 
 }
 
@@ -671,12 +809,14 @@ main {
     height: auto;
     flex-wrap: wrap;
 }
+
 @media (max-width:700px) {
     .kl789123 {
         top: 76px;
     }
 
 }
+
 @media (max-width:670px) {
 
     /* main */
@@ -716,23 +856,23 @@ main {
         font-size: 20px;
         min-height: 0px;
     }
-                
-                                /* info */
-                                .infsub {
+
+    /* info */
+    .infsub {
         font-size: 22px;
-        }
+    }
 
-                                /* table */
-                                table {
-                                    width: 99%;
-                                    margin: auto;
-                                }
+    /* table */
+    table {
+        width: 99%;
+        margin: auto;
+    }
 
-                                td,
-                                th,
-                                .ssn {
-                                    font-size: 18px;
-                                }
+    td,
+    th,
+    .ssn {
+        font-size: 18px;
+    }
 }
 
 @media (max-width:500px) {
@@ -755,7 +895,7 @@ main {
     }
 
     /* Primary btn */
-                                .mdbtn,
+    .mdbtn,
     .kpb789123 {
         height: 30px;
         width: 110px;
@@ -777,11 +917,30 @@ main {
 }
 
 @media (max-width:470px) {
-
+    .drp1qa input{
+        width: 180px;
+    }
+    .maniwrraper{
+display: grid;
+gap: 10px;
+grid-template-columns: repeat(2,150px);
+    }
+    .navlink{
+        width: 150px;
+        height: 150px;
+        font-size: 25px;
+    }
     /* main */
     .mali147852 {
         min-width: initial;
         margin-right: 25px;
+    }
+    .itsec{
+        padding: 0px;
+    }
+    .itsec a{
+        width: 170px;
+        height: 170px;
     }
 
     .abc123456 {
@@ -813,12 +972,25 @@ main {
     }
 
     .drp1qa select {
-        width: 300px;
+        width: 95%;
         height: 40px;
     }
-        .sydrp {
-            width: 100%;
-        }
+
+    .sydrp {
+        width: 100%;
+    }
+}
+@media (max-width:320px){
+    .maniwrraper{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .navlink{
+        width: 95%;
+        height: 50px;
+        font-size: 20px;
+    }
 }
 
 @media (max-width:390px) {
@@ -880,5 +1052,10 @@ main {
     .mc759351 {
         flex-direction: column;
         margin-left: 10px;
+    }
+    .itsec a{
+        width: 120px;
+        height: 120px;
+        font-size: 20px;
     }
 }
