--- a/public/style.css
+++ b/public/style.css
@@ -44,14 +44,14 @@ h1 {
 
 }
 
-.footer {
+/* .footer { */
     /* position: absolute; */
     /* bottom: 0;
     width: inherit;
     border-bottom-left-radius: 30px;
     left: 0;
     height: 5vh; */
-}
+/* } */
 
 .book input,
 select {
